hw10